frontend/test/should_pass/pattern_009.grg
pattern Foo
{
	x: Node;
	
	replace(y:Node)
	{
	}
}

rule r
{
	x:Node;
	foo:Foo();

	replace
	{
		foo(x);
	}
}