frontend/test/should_fail/ret_020.grg
rule r : (Node)
{
    x:Node;
    replace {
        return (x);
    }
}
